discussion/kv_engine/185698/185698_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54853: DCP: Allow consumers to optionally skip rollback due to purged deletes

Add support for a new StreamRequest flag: 'Ignore Purged Tombstones'.

Quoting from the documentation:

  Request that the server skips rolling back if the client is behind
  the purge seqno, but the request is otherwise valid and satifiable
  (i.e. no other rollback checks such as UUID mismatch fail).

  The client could end up missing purged tombstones (and hence could
  end up never being told about a document deletion).

  The intent of this flag is to allow clients who ignore deletes to
  avoid rollbacks to zero which are sorely due to them being behind
  the purge seqno.

Adds the new flag to the protocol, and handles it in DcpProducer - if
the flag is set then the request ignores the vBucket's purgeSeqno and
treats it as zero.

Change-Id: I968b353b1ab19dfc4dd8cce9ec382f8b81e54af6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-02-01 15:15:32.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-01 15:15:46.000000000
Message: 
Patch Set 4: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/335644/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-01 15:50:26.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1006/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_by_seqno_disk.cc:116:30: error: use of undeclared identifier "DCP_ADD_STREAM_FLAG_IGNORE_PURGED_TOMBSTONES" [clang-diagnostic-error]
    if (stream->getFlags() & DCP_ADD_STREAM_FLAG_IGNORE_PURGED_TOMBSTONES) {
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_memory.cc:142:30: error: use of undeclared identifier "DCP_ADD_STREAM_FLAG_IGNORE_PURGED_TOMBSTONES" [clang-diagnostic-error]
    if (stream->getFlags() & DCP_ADD_STREAM_FLAG_IGNORE_PURGED_TOMBSTONES) {
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1006/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_by_seqno_disk.cc:116:30:
error: use of undeclared identifier "DCP_ADD_STREAM_FLAG_IGNORE_PURGED_TOMBSTONES" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1006/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1205/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [35/160]: test access scanner...WARNING: Logging before InitGoogleLogging() is written to STDERR
W0201 07:32:25.907603 91068 HazptrDomain.h:670] Using the default inline executor for asynchronous reclamation may be susceptible to deadlock if the current thread happens to hold a resource needed by the deleter of a reclaimable object


99% tests passed, 1 tests failed out of 429

Total Test time (real) = 702.68 sec

The following tests FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1205/ )

Timeout of a CTest test 429/429 Test #284: ep_testsuite.value_eviction.magma .............................................................................................} ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1205/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/976/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill_memory.cc:142:30:
error: use of undeclared identifier "DCP_ADD_STREAM_FLAG_IGNORE_PURGED_TOMBSTONES"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/976/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1020/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_magma_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_magma_value_only
[2023-02-01T15:49:36.839Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1736: Failure
[2023-02-01T15:49:36.839Z] Expected equality of these values:
[2023-02-01T15:49:36.839Z]   err
[2023-02-01T15:49:36.839Z]     Which is: would block
[2023-02-01T15:49:36.839Z]   store->getMetaData( key_1, vbid, cookie, metadata, deleted, datatype)
[2023-02-01T15:49:36.839Z]     Which is: no memory
[2023-02-01T15:49:36.839Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1741: Failure
[2023-02-01T15:49:36.839Z] Expected equality of these values:
[2023-02-01T15:49:36.839Z]   cb::engine_errc::success
[2023-02-01T15:49:36.839Z]     Which is: success
[2023-02-01T15:49:36.839Z]   store->getMetaData( key_1, vbid, cookie, metadata, deleted, datatype)
[2023-02-01T15:49:36.839Z]     Which is: no memory
[2023-02-01T15:49:36.839Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1751: Failure
[2023-02-01T15:49:36.839Z] Expected equality of these values:
[2023-02-01T15:49:36.839Z]   err
[2023-02-01T15:49:36.839Z]     Which is: would block
[2023-02-01T15:49:36.839Z]   store->get(key_1, vbid, cookie, options).getStatus()
[2023-02-01T15:49:36.839Z]     Which is: no memory
[2023-02-01T15:49:36.839Z] Key with TTL:10 should be removed.
[2023-02-01T15:49:36.839Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1760: Failure
[2023-02-01T15:49:36.839Z] Expected equality of these values:
[2023-02-01T15:49:36.839Z]   cb::engine_errc::success
[2023-02-01T15:49:36.839Z]     Which is: success
[2023-02-01T15:49:36.839Z]   item.getStatus()
[2023-02-01T15:49:36.839Z]     Which is: would block
[2023-02-01T15:49:36.839Z] [  FAILED  ] EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (36 ms)
EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_magma_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1020/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22498/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1323/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/999/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1019/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1029/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1022/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1028/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
